# Flask-Blog-WebApp

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  template.py
.github/workflows/: cicd.yaml
sql-alchemy/: database.db
src/flaskblog/: __init__.py  auth.py  config.py  models.py  views.py
src/flaskblog/static/: main.css
src/flaskblog/templates/: about.html  account.html  change_password.html  create_post.html  dashboard.html  home.html  index.html  layout.html  login.html  post.html  register.html  reset_request.html  reset_token.html  users_posts.html
src/flaskblog/templates/admin/: admin.html  admin_account.html  admin_dashboard.html  admin_login.html  home.html  layout.html
src/flaskblog/templates/errors/: 403.html  404.html  500.html
src/flaskblog/users/: forms.py  logger.py  routes.py  utils.py
src/flaskblog/users/admin/: routes.py
src/flaskblog/users/main/: routes.py
src/flaskblog/users/posts/: routes.py
test/: config.py
tests/: conftest.py
tests/functional/: test_users.py
tests/unit/: test_models.py
